styling name and title

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
             </a>
                 <div class="col-md-8">
+                    <div class="row bg-color-name-title">
+                        <div class="col heading">
+                            <h1 class="name">Gary Moore</h1>
+                                <h2 class="title">Full Stack Developer</h2>
+
+                        </div>
+
+                    </div>
 
                 </div>
         </div>
