adding start of main section and social icon styling to footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                         <div class="col heading">
                             <h1 class="name">Gary Moore</h1>
                                 <h2 class="title">Full Stack Developer</h2>
-
                         </div>
                    </div>
                         <div class="row no-gutters">
@@ -44,11 +43,21 @@
                         </div>
                 </div>
         </div>
-
     </header>
-        <section>
+
+        <section class="container-fluid">
+            <div class="row row-table">
+                <div class="col-md-8 bg-color-three-reasons section-column">
+                    <div class="row">
+                        <div class="col">
+                            <h3 class="section-heading uppercase">About Me</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
+
             <footer class="container-fluid">
                 <div class="row">
                     <div class="col-sm-4">
@@ -99,9 +108,6 @@
                             </ul>
                     </div>
                 </div>
-        
-
             </footer>
-
 </body>
 </html>
