--- a/resume.html
+++ b/resume.html
@@ -50,14 +50,14 @@
                 <div class="col-md-4 bg-color-personal-info section-column">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="section-heading uppercase">Personal Info </h3>
+                            <h3 class="section-heading uppercase">Work History</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-8 bg-color-three-reasons section-column">
                     <div class="row">
                         <div class="col">
-                            <h3 class="section-heading uppercase">About Me</h3>
+                            <h3 class="section-heading uppercase">My Skills</h3>
                         </div>
                     </div>
                         <div class="row">
