--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo">
+            <a href="homepage.html" class="col-md-4 logo">
 
             </a>
                 <div class="col-md-8">
@@ -64,10 +64,10 @@
                             <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                                 <div class="row">
                                     <div class="col-2">
-                                        <i class="three-reasons-icon fa fa-question" aria-hidden="true"></i>
+                                        <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                                     </div>
                                         <div class="col-10">
-                                            <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                            <h4 class="three-reasons-heading uppercase">Front End</h4>
                                                 <p>
                                                     I'm a skilled full stack developer with a wealth of technical experience.
                                                 </p>
@@ -77,17 +77,66 @@
                                 <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                                     <div class="row">
                                         <div class="col-2">
-                                        <i class="three-reasons-icon fa fa-thumbs-up" aria-hidden="true"></i>
+                                        <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                                     </div>
                                         <div class="col-10">
-                                            <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                            <h4 class="three-reasons-heading uppercase">Back End</h4>
                                                 <p>
                                                     I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
                                                 </p>
                                         </div>
                         </div>
                 </div>
-
+                        </div>
+                            <div class="row">
+                                 <div class="col">
+                                    <div class="progress">
+                                         <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                            <span class="sr-only">90% Complete</span>
+                                           </div>
+                                                 <span class="progress-type">HTML / HTML5</span>                                                    </div>
+                                            </div>
+                            </div>
+                                <div class="row">
+                                 <div class="col">
+                                    <div class="progress">
+                                         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                            <span class="sr-only">80% Complete</span>
+                                           </div>
+                                                 <span class="progress-type">CSS / CSS3</span>  
+                                            </div>
+                                        </div>
+                                 </div>
+                                    <div class="row">
+                                        <div class="col">
+                                     <div class="progress">
+                                         <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                            <span class="sr-only">70% Complete</span>
+                                           </div>
+                                                 <span class="progress-type">JavaScript / jQuery</span>  
+                                            </div>
+                                        </div>
+                                 </div>
+                                    <div class="row">
+                                 <div class="col">
+                                    <div class="progress">
+                                         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                            <span class="sr-only">60% Complete</span>
+                                           </div>
+                                                 <span class="progress-type">Python / Django</span>  
+                                            </div>
+                                        </div>
+                                 </div>
+                                    <div class="row">
+                                 <div class="col">
+                                    <div class="progress">
+                                         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                            <span class="sr-only">80% Complete</span>
+                                           </div>
+                                                 <span class="progress-type">SQL / NoSQL</span>  
+                                            </div>
+                                        </div>
+                                 </div>
         </section>
 
             <footer class="container-fluid">
