added work history content

--- a/resume.html
+++ b/resume.html
@@ -47,12 +47,30 @@
 
         <section class="container-fluid">
             <div class="row">
-                <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="col-md-4 bg-color-work-history section-column">
                     <div class="row">
                         <div class="col-12">
-                            <h3 class="section-heading uppercase">Work History</h3>
+                            <h3 class="history-heading uppercase">Work History</h3>
                         </div>
                     </div>
+                        <div class="history-items">
+                    <div class="timeline-item" data-dates="02/2019 - Present">
+                            <h4>Boots</h4>
+                                <p>Test Analyst</p>
+                        </div>
+                        <div class="timeline-item" data-dates="03/2018 - 02/2019">
+                            <h4>CDL</h4>
+                                <p>Product Developer</p>
+                        </div>
+                            <div class="timeline-item" data-dates="06/2015 - 02/2019">
+                            <h4>Elite Human Performance</h4>
+                                <p>Strength and Conditioning Coach</p>
+                        </div>
+                            <div class="timeline-item" data-dates="08/2010 - 06/2015">
+                            <h4>Virgin Active</h4>
+                                <p>Personal Trainer</p>
+                        </div>
+                            </div>
                 </div>
                 <div class="col-md-8 bg-color-three-reasons section-column">
                     <div class="row">
@@ -69,7 +87,8 @@
                                         <div class="col-10">
                                             <h4 class="three-reasons-heading uppercase">Front End</h4>
                                                 <p>
-                                                    I'm a skilled full stack developer with a wealth of technical experience.
+                                                    I'm skilled in user experience design, using HTML / CSS /JavaScript to design beautiful websites. I have
+                                                    extensive experience in front end frameworks such as Angular and React.
                                                 </p>
                                         </div>
                                 </div>
@@ -82,61 +101,47 @@
                                         <div class="col-10">
                                             <h4 class="three-reasons-heading uppercase">Back End</h4>
                                                 <p>
-                                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a great user experience.
+                                                    I specialise in data driven web applications. Many of my projects utilise document based data.
+                                                    I use Python and Django in conjunction with MongoDB to process and present information.
                                                 </p>
                                         </div>
                         </div>
                 </div>
                         </div>
-                            <div class="row">
+                            <div class="row progress-section">
                                  <div class="col">
                                     <div class="progress">
                                          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                                             <span class="sr-only">90% Complete</span>
                                            </div>
-                                                 <span class="progress-type">HTML / HTML5</span>                                                    </div>
+                                                 <span class="progress-type">HTML / HTML5</span>                                                  
                                             </div>
-                            </div>
-                                <div class="row">
-                                 <div class="col">
                                     <div class="progress">
                                          <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                             <span class="sr-only">80% Complete</span>
                                            </div>
                                                  <span class="progress-type">CSS / CSS3</span>  
                                             </div>
-                                        </div>
-                                 </div>
-                                    <div class="row">
-                                        <div class="col">
                                      <div class="progress">
                                          <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
                                             <span class="sr-only">70% Complete</span>
                                            </div>
                                                  <span class="progress-type">JavaScript / jQuery</span>  
                                             </div>
-                                        </div>
-                                 </div>
-                                    <div class="row">
-                                 <div class="col">
                                     <div class="progress">
                                          <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
                                             <span class="sr-only">60% Complete</span>
                                            </div>
                                                  <span class="progress-type">Python / Django</span>  
                                             </div>
-                                        </div>
-                                 </div>
-                                    <div class="row">
-                                 <div class="col">
                                     <div class="progress">
                                          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                                             <span class="sr-only">80% Complete</span>
                                            </div>
                                                  <span class="progress-type">SQL / NoSQL</span>  
                                             </div>
-                                        </div>
                                  </div>
+                </div>
         </section>
 
             <footer class="container-fluid">
