--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="homepage.html" class="col-md-4 logo">
+            <a href="index.html" class="col-md-4 logo">
 
             </a>
                 <div class="col-md-8">
@@ -30,7 +30,7 @@
                                         <a href="#" class="hvr-sweep-to-bottom"><i class= "fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                                     </li>
                                     <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                        <a href="#" class="hvr-sweep-to-bottom"><i class= "fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                        <a href="resume.html" class="hvr-sweep-to-bottom"><i class= "fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                                     </li>
                                     <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
                                         <a href="#" class="hvr-sweep-to-bottom"><i class= "fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
